<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".DeviceControl"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/beaconview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.70"
        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >

    <LinearLayout
        android:id="@+id/buttonslay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
                <Button
                    android:id="@+id/wake"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wake"
                    android:layout_weight="0.33"
                    android:background="@drawable/borderedbutton"
                    android:onClick="onClickWake"
                    />

                <Button
                    android:id="@+id/sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/sleep"
                    android:layout_weight="0.33"
                    android:background="@drawable/borderedbutton"
                    android:onClick="onClickSleep"
                    />
                <Button
                    android:id="@+id/reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:text="@string/reset"
                    android:onClick="onClickReset"

                    android:background="@drawable/borderedbutton"
                    />
    </LinearLayout>
    </FrameLayout>


</LinearLayout>