<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/beaconrowlay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="3"
    android:columnCount="4"
    android:padding="10sp"
    android:background="@drawable/beaconinfobackground"
    android:layout_marginTop="5sp"
    >

    <TextView
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beacon_no"
        android:textSize="20sp"
        android:layout_columnWeight="0.25"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/beaconaddress"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="2"
        android:layout_columnWeight="0.25"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/hedgehog"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_columnWeight="0.25"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_columnWeight="0.25"
        android:layout_column="2"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beacon_status"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                />
            <TextView
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_status"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_columnWeight="0.25"

        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <TextView
                android:id="@+id/beaconstatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                />


            <TextView
                android:id="@+id/batterystatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="end"
                />


        </LinearLayout>
    </FrameLayout>


</GridLayout>

